correcting some of the bugs using findbugs